Fix Health/Willpower/Humanity tracker spacing to appear after 5th diamond
Changed CSS selector from :nth-child(6) to :nth-of-type(6) to properly
count only div elements and ignore text nodes/whitespace in the DOM. This
ensures the spacing appears after the 5th tracker box, creating proper
visual rows of 5.

--- a/app/static/css/vtm-phase1.css
+++ b/app/static/css/vtm-phase1.css
@@ -339,9 +339,9 @@
 }
 
 /* Add spacing between 5th and 6th dots to create visual rows of 5 */
-.health-box.small:nth-child(6),
-.willpower-box.small:nth-child(6),
-.humanity-box.small:nth-child(6) {
+.health-box.small:nth-of-type(6),
+.willpower-box.small:nth-of-type(6),
+.humanity-box.small:nth-of-type(6) {
     margin-left: 0.5rem;
 }
 
